--- a/www/index.html
+++ b/www/index.html
@@ -21,25 +21,9 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
-  
   </head>
 
   <body ng-app="starter">
-    <ion-nav-view > 
-    <!-- <div class="bar bar-header"> -->
-  <!-- <ion-nav-view  class="button button-icon icon ion-navicon"></ion-nav-view> -->
-  
-</ion-nav-view>
- 
-     <!--  -->
-    
-
-   <!--  <div class="bar bar-subheader item-input-inset" style="margin-top:10%;">
-  <label class="item-input-wrapper">
-    <i class="icon ion-ios-search placeholder-icon"></i>
-    <input type="search" placeholder="Search">
-  </label>
-  </div> -->
-
+    <ion-nav-view></ion-nav-view>
   </body>
 </html>
